After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 747120 - crash while trying to get tracks names
crash while trying to get tracks names
Status: RESOLVED FIXED
Product: sound-juicer
Classification: Applications
Component: general
3.14.x
Other Linux
: High critical
: ---
Assigned To: Sound Juicer Maintainers
Sound Juicer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-03-31 15:16 UTC by Jeff
Modified: 2015-05-26 13:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
console output on crash (64.45 KB, text/plain)
2015-03-31 15:16 UTC, Jeff
  Details
Fix a crash in multiple_album_dialog() (1003 bytes, patch)
2015-04-01 13:28 UTC, Phillip Wood
none Details | Review

Description Jeff 2015-03-31 15:16:29 UTC
Created attachment 300672 [details]
console output on crash

Using v3.14.0 on Archlinux 32 & 64 bits.

I tried to encode the album Community Music from Asian Dub Foundation but contrary to other discs, this one makes sound-juicer crashing while trying to get the tracks name.
I attached the console output after the crash.

FYI, I tried disabling my network adapter, typed the tracks name manually, clicked extract and it worked.
Comment 1 André Klapper 2015-03-31 21:12:55 UTC
Thanks for taking the time to report this.
Can you get us a stack trace under gdb? Please see https://wiki.gnome.org/Community/GettingInTouch/Bugzilla/GettingTraces for more information on how to do so. When pasting a stack trace in this bug report, please reset the status of this bug report from NEEDINFO to its previous status. Thanks in advance!
Comment 2 Phillip Wood 2015-04-01 13:27:37 UTC
As André said thanks for taking the time to report this. I think I've found the problem. One of the releases matching the discid[1] has no recording label, release country or release date details which due to a bug means sound-juicer is trying to free a static string. I'll attach a patch and push it as that bug needs fixing. Would you be able to check that it fixes your problem by building sound-juicer-git[2] from the aur and testing that it fixes your crash please.

[1] https://musicbrainz.org/cdtoc/ZdNLaz3iD4y7TGYnrAQinUR9dkM
[2] https://aur.archlinux.org/packages/so/sound-juicer-git/sound-juicer-git.tar.gz
Comment 3 Phillip Wood 2015-04-01 13:28:33 UTC
Created attachment 300747 [details] [review]
Fix a crash in multiple_album_dialog()

The string returned by format_release_details() is freed in
multiple_album_dialog() so the fallback string used when there are no
extra release details needs to be copied before being returned.
Comment 4 Phillip Wood 2015-04-01 13:29:39 UTC
Attachment 300747 [details] pushed as 76f1ffd - Fix a crash in multiple_album_dialog()
Comment 5 Jeff 2015-04-02 12:46:04 UTC
Hi there,
Sorry for my late reply. I actually lent the album to a friend as I couldn't extract it, so currently I cannot provide more data neither run tests.
I'll try to get the CD back and tell you if the patch fixed the crashing.
Comment 6 Phillip Wood 2015-04-02 15:37:16 UTC
(In reply to Jeff from comment #5)
> Hi there,
> Sorry for my late reply. I actually lent the album to a friend as I couldn't
> extract it, so currently I cannot provide more data neither run tests.
> I'll try to get the CD back and tell you if the patch fixed the crashing.

Hi Jeff, thanks for agreeing to test the fix, there's no great rush, I'll be offline next week anyway. Just post the result when you get a chance to run the test
Comment 7 Phillip Wood 2015-05-04 09:53:05 UTC
(In reply to Jeff from comment #5)
> Hi there,
> Sorry for my late reply. I actually lent the album to a friend as I couldn't
> extract it, so currently I cannot provide more data neither run tests.
> I'll try to get the CD back and tell you if the patch fixed the crashing.

Hi Jeff, the fix is in the 3.16.1 package on arch so now there's no need to build the aur package when you test it
Comment 8 Jeff 2015-05-22 16:58:15 UTC
Hi! I finally got the CD back for testing and I could extract the CD without crash :)
Great job ! Thanks !
Marking the bug as resolved fixed.
Comment 9 Phillip Wood 2015-05-26 13:20:23 UTC
(In reply to Jeff from comment #8)
> Hi! I finally got the CD back for testing and I could extract the CD without
> crash :)
That's great, thanks for taking the time to test it.