Fix a crash in multiple_album_dialog()

The string returned by format_release_details() is freed in
multiple_album_dialog() so the fallback string used when there are no
extra release details needs to be copied before being returned.

https://bugzilla.gnome.org/show_bug.cgi?id=747120